tests/ui/enum_bad_param.stderr
error: fixed-derive error: Unrecognized parameter "thing".
  --> tests/ui/enum_bad_param.rs:10:24
   |
10 | #[fixed(key_width = 3, thing = yes)]
   |                        ^^^^^
